# shuuten

./: .bumpversion.toml  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release-oidc.yml  release.yml  test.yml
docs/: index.md  installation.md  usage.md
src/shuuten/: __init__.py  __main__.py  _api.py  _aws_links.py  _cli.py  _client.py  _constants.py  _env_helpers.py  _event.py  _formatting.py  _log.py  _models.py  _notifier.py  _redact.py  _requests.py  _runtime.py  _shuuten.py  cli.py  shuuten.py
src/shuuten/_destinations/: __init__.py  _email.py  _slack.py  _teams.py
src/shuuten/_integrations/: __init__.py  _logging.py
src/shuuten/destinations/: __init__.py  _slack.py  email.py  slack.py  teams.py
src/shuuten/integrations/: __init__.py  logging.py  structlog.py
tests/: __init__.py  test_shuuten.py
